--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <里><a href="#">产品</a><跨度>|</跨度></里>
                 <里><a href="#">应用案例</a><跨度>|</跨度></里>
                 <里><a href="#">视频</a><跨度>|</跨度></里>
-                <里><a href=" guanyv.html ">技术支持</a><跨度>|</跨度></里>
+                <里><a href="# ">技术支持</a><跨度>|</跨度></里>
                 <里><a href=" http://192.168.1.164:5000/# ">下载</a><跨度>|</跨度></里>
                 <里>
                     <a href="#">联系我们</a>
